add support for deleting faggruppe
